syntax = "proto3";

package apgms.events;

message BaseEvent {
  string event_id = 1;
  string occurred_at = 2;
  string schema_version = 3;
  string source = 4;
}

message PaymentCounterparty {
  string name = 1;
  string account_id = 2;
}

message PaymentInitiated {
  BaseEvent base = 1;
  string payment_id = 2;
  string org_id = 3;
  string currency = 4;
  double amount = 5;
  string method = 6;
  PaymentCounterparty counterparty = 7;
  string reference = 8;
}

message PaymentSettled {
  BaseEvent base = 1;
  string payment_id = 2;
  string org_id = 3;
  string currency = 4;
  double amount = 5;
  string settled_at = 6;
  string settlement_reference = 7;
}

message PaymentFailed {
  BaseEvent base = 1;
  string payment_id = 2;
  string org_id = 3;
  string currency = 4;
  double amount = 5;
  string failure_code = 6;
  string failure_reason = 7;
}

message DesignatedMovement {
  string account_id = 1;
  string type = 2;
  double balance = 3;
  double inflow_24h = 4;
  uint32 transfer_count_24h = 5;
}

message ReconciliationGenerated {
  BaseEvent base = 1;
  string org_id = 2;
  string artifact_id = 3;
  string sha256 = 4;
  string generated_at = 5;
  double total_paygw = 6;
  double total_gst = 7;
  repeated DesignatedMovement movements_last_24h = 8;
}

message AuditLogRecorded {
  BaseEvent base = 1;
  string audit_id = 2;
  string org_id = 3;
  string actor_id = 4;
  string action = 5;
  string metadata_json = 6;
}
